--- a/.github/workflows/inputs-test.yml
+++ b/.github/workflows/inputs-test.yml
@@ -1,3 +1,6 @@
+# Copyright 2023 Hewlett Packard Enterprise Development LP
+
+name: Pipeline Inputs Test Run
 on:
   workflow_dispatch:
     inputs:
