--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -10,4 +10,5 @@ jobs:
         run: |
           gh api \
           -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
           /orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
