--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -8,7 +8,8 @@ jobs:
     steps:
       - name: Check for existing secrets
         run: |
-          gh api \
+          curl \
           -H "Accept: application/vnd.github+json" \
           -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
-          /orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
