--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -10,6 +10,6 @@ jobs:
         run: |
           curl \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}"\
+          -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}"\
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
