--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -8,4 +8,4 @@ jobs:
     steps:
       - name: Check for existing secrets
         run: |
-          curl -H "Accept: application/vnd.github+json"  -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
+          curl -H "Accept: application/vnd.github+json"  -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
