--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -6,6 +6,13 @@ jobs:
   get_secrets:
     runs-on: ubuntu-latest
     steps:
-      - name: Check for existing secrets
-        run: |
-          curl -H "Accept: application/vnd.github+json"  -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" -H "X-GitHub-Api-Version: 2022-11-28" https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
+      - name: Update for test secret
+        run: >
+          curl 
+          -X PUT
+          -H "Accept: application/vnd.github+json"  
+          -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
+          -H "X-GitHub-Api-Version: 2022-11-28" 
+          https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
+          -d '{"encrypted_value":"c2VjcmV0", "visibility":"private"}'
+
