--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -14,5 +14,5 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
-          -d '{"encrypted_value":"c2VjcmV0", "visibility":"private"}'
+          -d '{"encrypted_value":"c2VjcmV0","key_id":"012345678912345678","visibility":"private"}'
 
