--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -6,6 +6,13 @@ jobs:
   get_secrets:
     runs-on: ubuntu-latest
     steps:
+      - name: Get Secret pub key
+        run: >
+          curl \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}"\
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/orgs/hpe-cds/actions/secrets/public-key
       - name: Update for test secret
         run: >
           curl 
