--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -12,7 +12,7 @@ jobs:
             -H "Accept: application/vnd.github+json" \
             -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/orgs/hpe-cds/actions/secrets/public-key
+            https://api.github.com/orgs/hpe-cds/actions/secrets/public-key > $HOME/pub-key.json
       - name: Update for test secret
         run: >
           curl 
@@ -21,5 +21,7 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
-          -d '{"encrypted_value":"c2VjcmV0","key_id":"012345678912345678","visibility":"private"}'
+          -d '{"encrypted_value":"c2VjcmV0",
+            "key_id":echo \"$(jq -r '.key_id' $HOME/pub-key.json)\"",
+            "visibility":"private"}'
 
