--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -13,6 +13,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}"\
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/orgs/hpe-cds/actions/secrets/public-key > $HOME/pub-key.json
+      # TODO: Update the key_id to use output from pub key
       - name: Update for test secret
         run: >
           curl 
@@ -22,6 +23,5 @@ jobs:
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
           -d '{"encrypted_value":"c2VjcmV0",
-            "key_id":echo \"$(jq -r '.key_id' $HOME/pub-key.json)\"",
+            "key_id":"568250167242549743"",
             "visibility":"private"}'
-
