--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -22,4 +22,4 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
-          -d '{"encrypted_value":"c2VjcmV0","key_id":"568250167242549743"","visibility":"private"}'
+          -d '{"encrypted_value":"c2VjcmV0","key_id":"568250167242549743","visibility":"private"}'
