--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -6,13 +6,21 @@ jobs:
   get_secrets:
     runs-on: ubuntu-latest
     steps:
+      - name: Refresh Artefactory token
+        run: >
+          curl \
+            -H "Authorization: Bearer ${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}" \
+            -XPOST \
+            "http://hpecds.jfrog.io/access/api/v1/tokens"
+            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}''
       - name: Get Secret pub key
         run: >
           curl \
             -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}"\
+            -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/orgs/hpe-cds/actions/secrets/public-key > $HOME/pub-key.json
+
       # TODO: Update the key_id to use output from pub key
       - name: Update for test secret
         run: >
