removed trailing quote

--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -12,7 +12,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}" \
             -XPOST \
             "http://hpecds.jfrog.io/access/api/v1/tokens"
-            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}''
+            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}'
       - name: Get Secret pub key
         run: >
           curl \
