--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -12,7 +12,9 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}" \
             -X POST \
             "https://hpecds.jfrog.io/access/api/v1/tokens" \
-            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}'
+            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}' > $HOME/artefactory-key.json
+      - name: Get new artefactory key
+        run: echo "new_artefactory_token=$(jq -r '.access_token' $HOME/pub-key.json)" >> $GITHUB_ENV
       - name: Get Secret pub key
         run: >
           curl \
@@ -20,7 +22,8 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" \
             -H "X-GitHub-Api-Version: 2022-11-28" \
             https://api.github.com/orgs/hpe-cds/actions/secrets/public-key > $HOME/pub-key.json
-
+      - name: Set pub key_id for updates
+        run: echo "pub_key_id=$(jq -r '.key_id' $HOME/pub-key.json)" >> $GITHUB_ENV
       # TODO: Update the key_id to use output from pub key
       - name: Update for test secret
         run: >
@@ -29,5 +32,5 @@ jobs:
           -H "Accept: application/vnd.github+json"  
           -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
-          https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_TEST_SECRET
-          -d '{"encrypted_value":"c2VjcmV0","key_id":"568250167242549743","visibility":"private"}'
+          https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_ARTEFACTORY_TEST_TOKEN
+          -d '{"encrypted_value":"${{ env.new_artefactory_token }}","key_id":"${{ env.pub_key_id }}","visibility":"private"}'
