updated aretfactory key address

--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -14,7 +14,7 @@ jobs:
             "https://hpecds.jfrog.io/access/api/v1/tokens" \
             -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}' > $HOME/artefactory-key.json
       - name: Get new artefactory key
-        run: echo "new_artefactory_token=$(jq -r '.access_token' $HOME/pub-key.json)" >> $GITHUB_ENV
+        run: echo "new_artefactory_token=$(jq -r '.access_token' $HOME/artefactory-key.json)" >> $GITHUB_ENV
       - name: Get Secret pub key
         run: >
           curl \
@@ -24,7 +24,6 @@ jobs:
             https://api.github.com/orgs/hpe-cds/actions/secrets/public-key > $HOME/pub-key.json
       - name: Set pub key_id for updates
         run: echo "pub_key_id=$(jq -r '.key_id' $HOME/pub-key.json)" >> $GITHUB_ENV
-      # TODO: Update the key_id to use output from pub key
       - name: Update for test secret
         run: >
           curl 
