--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -34,20 +34,18 @@ jobs:
           scan-type: 'fs'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
-      
 
-#  sonarqube:
-#    name: SonarQube Trigger
-#    runs-on: ubuntu-latest
-#    steps:
-#    - name: Checking out
-#      uses: actions/checkout@master
-#      with:
-#        fetch-depth: 0
-#    - name: SonarQube Scan
-#      uses: kitabisa/sonarqube-action@v1.2.0
-#      with:
-#        host: ${{ secrets.SONARQUBE_HOSTS }}
-#        login: ${{ secrets.SONARQUBE_TOKEN }}
-#        projectBaseDir: .
-#        projectKey: ${{ env.REPO_NAME }}
+  helm-push:
+    runs-on: ubuntu-latest
+    container: 
+      image: ghcr.io/hpe-cds/sc-containers-images/cds-go-dev:0.0.68-0-ga3d26f8
+      options: --user root
+    steps:
+    - name: Helm build
+      run: "helm package helm/hello-world --version 0.1 --app-version 0.1"
+    - name: Push to helm
+      uses: hpe-cds/helm-push@dev
+      with:
+        skip_checkout: false
+        helm_package: hello-world-0.1.tgz
+
