--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -42,6 +42,7 @@ jobs:
       options: --user root
     permissions:
       id-token: write # This is required for requesting the JWT
+      packages: read
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
