--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -49,13 +49,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Helm build
       run: "helm package helm/hello-world --version 0.1 --app-version 0.1"
-    - name: check helm location
-      run: | 
-        ls
-        pwd
     - name: Push to helm
       uses: hpe-cds/helm-push@dev
       with:
-        skip_checkout: true
+        skip_checkout: false
         helm_package: /__w/hello-world/hello-world/hello-world-0.1.tgz
 
