--- a/.github/workflows/get-secrets.yml
+++ b/.github/workflows/get-secrets.yml
@@ -6,15 +6,15 @@ jobs:
   get_secrets:
     runs-on: ubuntu-latest
     steps:
-      - name: Refresh Artefactory token
+      - name: Refresh Artifactory token
         run: >
           curl \
             -H "Authorization: Bearer ${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}" \
             -X POST \
             "https://hpecds.jfrog.io/access/api/v1/tokens" \
-            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}' > $HOME/artefactory-key.json
-      - name: Get new artefactory key
-        run: echo "new_artefactory_token=$(jq -r '.access_token' $HOME/artefactory-key.json)" >> $GITHUB_ENV
+            -d '{"scope:refresh_token","refresh_token:${{ secrets.ANDY_ARTEFACTORY_TEST_TOKEN }}"}' > $HOME/artifactory-key.json
+      - name: Get new artifactory key
+        run: echo "new_artifactory_token=$(jq -r '.access_token' $HOME/artifactory-key.json)" >> $GITHUB_ENV
       - name: Get Secret pub key
         run: >
           curl \
@@ -32,4 +32,4 @@ jobs:
           -H "Authorization: Bearer ${{ secrets.ANDY_TEST_TOKEN }}" 
           -H "X-GitHub-Api-Version: 2022-11-28" 
           https://api.github.com/orgs/hpe-cds/actions/secrets/ANDY_ARTEFACTORY_TEST_TOKEN
-          -d '{"encrypted_value":"${{ env.new_artefactory_token }}","key_id":"${{ env.pub_key_id }}","visibility":"private"}'
+          -d '{"encrypted_value":"${{ env.new_artifactory_token }}","key_id":"${{ env.pub_key_id }}","visibility":"private"}'
