--- a/.github/workflows/pre-build.yaml
+++ b/.github/workflows/pre-build.yaml
@@ -35,10 +35,8 @@ jobs:
           severity: 'CRITICAL,HIGH'
 
   helm-push:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Push to helm
-      uses: hpe-cds/helm-push/.github/workflows/helm-process.yml@dev
-      with:
-        helm_package: helm/hello-world
-        version: 0.2
+    name: Push to helm
+    uses: hpe-cds/helm-push/.github/workflows/helm-process.yml@dev
+    with:
+      helm_package: helm/hello-world
+      version: 0.2
