--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,7 +24,7 @@ concurrency:
 jobs:
     spinnaker_address:
       runs-on: ubuntu-latest
-      environment: dev
+      environment: prod
       steps:
         - name: echo spinnaker url
           shell: bash
